--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "react-hooks/exhaustive-deps": "off",
+    "@typescript-eslint/no-empty-interface": "off"
   }
 }
