--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-draggable": "^4.4.5",
     "react-icons": "^4.4.0",
+    "react-rnd": "^10.3.7",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@babel/preset-react": "^7.17.12",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
+    "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
