--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.17.12",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
+    "@types/react-rnd": "^8.0.0",
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
