--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
