--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-rnd": "^10.3.7",
+    "react-select": "^5.4.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5"
   },
